# gitea-to-github-migrator

./: Cargo.toml  build_and_run.sh  readme.md
src/: cli.rs  errors.rs  lib.rs  main.rs  utils.rs
src/git/: mirror.rs  mod.rs
src/gitea/: api.rs  models.rs
src/github/: api.rs  models.rs
src/progress/: mod.rs  multi_progress.rs
src/tests/: mod.rs  utils_test.rs
