[package]
name = "gitea-to-github-migrator"
version = "0.1.0"
edition = "2024"

[dependencies]
# --- HTTP Client (Gitea/GitHub API) ---
reqwest = { version = "0.12.15", features = ["json", "stream"] } # Async HTTP
tokio = { version = "1.45.0", features = ["full", "test-util", "rt-multi-thread"] }              # Runtime Async
serde = { version = "1.0.219", features = ["derive"] }           # (De)serialisation
serde_json = "1.0.140"                                           # Manipulation JSON

# --- CLI & Logging ---
clap = { version = "4.5.38", features = ["derive"] }             # Parsing des arguments
indicatif = "0.17.11"                                            # Progress Bars

# --- Git Operations ---
tokio-process = "0.2.5"                                          # Commandes shell async

# --- Gestion d'Erreurs ---
thiserror = "2.0.12"                                             # Erreurs custom
anyhow = "1.0.98"                                                # Erreurs contextuelles

# --- Directory ---
dirs = "6.0.0"

#----- Stylise les print ----
colored = "3.0.0"

# ---- Security password -----
dialoguer = { version = "0.11.0", features = ["password"] }

# ----test unitaire -------
mockito = "1.7.0"
